--- a/ECommerce.API/ECommerce.API.csproj
+++ b/ECommerce.API/ECommerce.API.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Nullable>annotations</Nullable>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\my\source\repos\ECommerceExample\ECommerce.API\ECommerce.API.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
